[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytscan"
version = "0.1.0"
description = "Python reimplementation of TSCAN trajectory inference"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "networkx>=2.6",
    "anndata>=0.8",
    "matplotlib>=3.4",
    "statsmodels>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
